[workspace]
members = ["client", "json", "jsonrpc"]
exclude = ["integration_test", "regtest"]
resolver = "2"

[patch.crates-io.bitcoind-json-rpc-client]
path = "client"

[patch.crates-io.bitcoind-json-rpc-types]
path = "json"

[patch.crates-io.jsonrpc]
path = "jsonrpc"

[patch.crates-io.base58ck]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin-io]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin-primitives]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"

[patch.crates-io.bitcoin-units]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-16-set-version-to-alpha"
